--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,275 +6,14 @@
 }
 .page-wrap {
   display: grid;
-  grid-template-columns: 30% 1fr;
-  height: 100%;
-}
-/* .page-wrap > * { outline: 1px solid grey; } */
-
-header, 
-main,
-.sections-container,
-section { position: relative; }
-
-.h-nav,
-.contents-detail,
-footer,
-.m-header > ul > li
-{ position: absolute; }
-
-
-/* header -------------------------------------------------------------- */
-.logo {
-  font-family:'Lalezar';
-  font-size: 1.8em;
-  outline: 1px solid red;
-  padding: 10px 0 0 60px;
-}
-
-.h-nav {
-  left: 60px;
-  bottom: 20%;
-}
-/* js */
-.page-wrap.h-on .h-nav{
-  display: none;
-}
-
-.h-nav button {
-  font-size: 1em;
-  padding: 10px 0 5px;
-  width: 100%;
-  text-align: left;
-  font-weight: 700;
-  position: relative; 
-}
-
-.h-nav button::before {
-  position: absolute;
-  content: '';
-  height: 50%;
-  border-left: 0 solid transparent;
-  border-top: 4px solid transparent;
-  border-bottom: 4px solid transparent;
-  top: 50%;
-  left: -57px;
-  transform: translateY(-50%) ;
-  transition:  ease-in-out  .4s;
-}
-/* js click했을때 남아 있어야 함. */
-.h-nav button.click:hover::before {
-  border-left: 13px solid #164b6d;
-}
-.h-nav button:hover {
-  color: #164b6d;
-}
-
-/* detail을 클릭 했을때 headr의 넓이는 길어지고 nav는 없어진다. contents-detail 내용이 보이게 된다. */
-.page-wrap.h-on  {grid-template-columns:38% 1fr;}
-.contents-detail {
-  display: none;
-  outline: 1px solid grey;
-  width: 80%;
-  height: 60%;
-  top: 50%; left: 50%;
-  transform: translate(-50%,-50%);
-}
-.page-wrap.h-on .contents-detail {display: block; }
-
-.contents-detail ul {
-  width: 100%; 
+  grid-template-columns: 30% auto ;
+  /* grid-template-rows: auto 60px; */
   height: 100%;
   position: relative;
-  display: none;
 }
-/* js  클릭했을때 해당 내용에 click이란 클래스명을 부여*/
-ul.click {
-  display: block;
-}
-.contents-detail ul > li {
-  display: none;
-  width: 100%;
-  background-color: lightseagreen;
+
+
+footer{
   position: absolute;
-  left: 0; 
-  top: 0;
   bottom: 0;
-}
-/* js ul.click이 붙어 있을경우   */
-ul.click > li.show {
-  display: block;
-}
-
-footer {
-  left: 0; right: 0; bottom: 0;
-  height: 40px;
-  background-color: #164b6d;
-}
-footer > p {
-  position: absolute;
-  top: 50%;
-  left: 20px;
-  transform: translateY(-50%);
-  color: white;
-  font-weight: bold;
-}
-
-
-/* main ---------------------------------------------------------------- */
-main {
-  /* background-color: wheat;  */
-  overflow:hidden}
-main > header {
-  background-color: #0f344b;
-  position: fixed;
-  top: 50px; 
-  width: 300px;
-  height: 25px;
-  z-index: 1000;
-}
-.m-header,
-ul {height: inherit; width: inherit;}
-
-.m-header > ul > li {
-  display: none;
-  left: 20px; bottom: 3px;
-  color: white;
-  font-size: 1.3em;
-  font-weight: 200;
-  line-height: 1em;
-}
-/* js m-on일때 보이게 된다.  */
-.m-header > ul > li.m-on {
-  display: block;
-}
-
-.sections-container,section {
-  width: 100%;
-  height: 100%;
-}
-.sections-container section {
-  outline: 1px solid red;
-  overflow: hidden;
-  display: none;
-  box-sizing: border-box;
-    overflow-y: scroll;
-}
-/* js s-on붙을때 보여진다. */
-.sections-container section.s-on {
-  display: block;
-}
-/* contact */
-.center {  
-  left: 50%; top: 50%;
-  transform: translate(-50%,-50%);
-}
-
-.s-contact > * { position: absolute;}
-.s-contact > h1 {
-  text-align: center;
-  width: fit-content;
-  font-size: 12em;
-  line-height: 1.4em;
-  color: rgba(31, 28, 77, 0.041);
-}
-.profile {
-height: 50%;
-width: 100%;
-}
-.p-image {
-  background-image: url('../images/profileImg.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  width: 240px;
-  height: 240px;
-  background-color: rgba(255, 255, 255, 0.678);
-  border-radius: 50%;
-  left: 20%;top: 50%;
-  transform: translateY(-50%);
-  overflow: hidden;
-}
-address { 
-  position: absolute;
-  right: 0; top: 50%;
-  transform: translateY(-50%);
-  width: 50%;
-  display: grid;
-  gap: 20px;
-  grid-template-rows: repeat(3,1fr);
-}
-address > a {
-  font-style: normal;
-  height: fit-content;
-  font-size: 1.3em;
-  font-weight: bold;
-  width: fit-content;
-  color: #0f344b;
-  padding: 7px 0;
-  line-height: 100%;
-}
-address > a > i {margin-right:9px ;}
-address > a:nth-child(1):hover{
-  color:#4c00b8 ;
-}
-address > a:nth-child(2):hover{
-  color:#d36d24 ;
-}
-address > a:nth-child(3):hover{
-  color:#007a70 ;
-}
-
-/* portfolio */
-.sections-container .s-portfolio > ul {
-  height: 300vh;
-  grid-template-rows: repeat(4,1fr);
-}
-.sections-container section > ul {
-  display: grid;
-}
-
-section > ul > li {
-  background-color: lightskyblue;
-  outline: 1px solid gold;
-  position: relative;
-}
-section > ul > li a,
-.detail{
-  left: 50%; 
-  transform: translateX(-50%);
-}
-
- section ul > li > a {
-  position: absolute;
-  top: 53px;
-  background-color: rgb(116, 129, 0);
-  width: 60%;
-  height: 380px;
-  overflow: hidden;
-}
-
-.result-images {
-  background-color: lightcoral;
-  width: 300%;
-  display: flex;
-}
-.result-images > li {
-  outline: 1px solid black;
-
-  width: 100%;
-  height: 100%;
-}
-.detail {
-  position: absolute;
-  background-color:#0f344b7e;;
-  font-size: 1.3em;
-  bottom: 0;
-  padding: 6px 10px;
-  border-radius: 30px;
-  color: white;
-
-}
-.detail:hover {
-  background-color: #0f344b;
-  transition:ease-out .4s;
 }
