--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -32,7 +32,7 @@ body {
     width: 100%;
     height: 100vh;
     padding:25px 40px;
-    max-width: 1471px;
+    max-width: 1500px;
     margin:0 auto;
     color: #404040;
 }
@@ -95,19 +95,69 @@ input:focus {
   outline: none;
 }
 
-/* scroll */
-*::-webkit-scrollbar {
-	width:10px;
+*::-webkit-scrollbar { display: none;}
+
+.loading {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: mediumaquamarine;
+    z-index: 1000;
+    display: grid;
+    place-items: center;
+
 }
-*::-webkit-scrollbar-track {
-  background-color: transparent;
+
+.scroll {
+    padding-top: 80px;
+    position: absolute;
+    width: 34px;
+    right: 50px;
+    bottom: 50px;
+    opacity: 1;
 }
-*::-webkit-scrollbar-thumb {
-	border-radius: 9px;
-	width: auto;
-  background-color:#585858
+.scroll span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 2px solid #404040;
+    border-bottom: 2px solid #404040;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: scroll 2s infinite;
+    animation: scroll 2s infinite;
+    opacity: 0;
+    box-sizing: border-box;
 }
-*::-webkit-scrollbar-button {
-  width: 0;
-  height: 0;
+
+.scroll span:nth-of-type(1) {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+.scroll span:nth-of-type(2) {
+  top: 16px;
+  -webkit-animation-delay: .15s;
+  animation-delay: .15s;
+}
+.scroll span:nth-of-type(3) {
+  top: 32px;
+  -webkit-animation-delay: .3s;
+  animation-delay: .3s;
+}
+
+@keyframes scroll {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
